crates/carta/tests/snapshots/golden_writer__markdown_strict__table__table-body-head.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<thead>
<tr>
<th>h1</th>
<th>h2</th>
</tr>
</thead>
<tbody>
<tr>
<th>group</th>
<th>values</th>
</tr>
&#10;<tr>
<th>k1</th>
<td>v1</td>
</tr>
<tr>
<th>k2</th>
<td>v2</td>
</tr>
</tbody>
</table>
