crates/carta/tests/snapshots/golden_writer__markdown_strict__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<caption>The full caption text</caption>
<thead>
<tr>
<th>h</th>
</tr>
</thead>
<tbody>
<tr>
<td>v</td>
</tr>
</tbody>
</table>
